# exercicioDRF

./: README.md  manage.py  pyproject.toml
exerciciodrf/: asgi.py  settings.py  urls.py  wsgi.py
